#680 fix upload dialog z-index

--- a/ng2-components/ng2-alfresco-upload/src/components/file-uploading-dialog.component.css
+++ b/ng2-components/ng2-alfresco-upload/src/components/file-uploading-dialog.component.css
@@ -2,6 +2,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1;
 }
 
 :host .show {
